# Spreadify.ai

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  railway.toml  railway.toml.example  railway.toml.template  render.blueprint.json  render.yaml  render.yaml.example
backend/.github/workflows/: railway.yml  render.yml
backend/alembic/: env.py
backend/alembic/versions/: 20240129_create_users_table.py  817c97c162bd_initial_migration.py  d44ffa9c0bdb_initial_migration.py  f5dcc15b6dd5_create_users_table.py
backend/app/: database.py  dependencies.py  main.py
backend/app/crud/: __init__.py  user.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: auth.py  streams.py  stripe.py  webrtc.py
backend/app/schemas/: auth.py  stream.py
backend/deploy/: pyproject.toml
backend/deploy/app/routers/: auth.py
backend/deploy/tests/: test_auth.py
backend/scripts/: check_environment.py  check_packages.py  configure_alembic.py  init_db.py  parse_auth_response.py  run_db_tests.sh  test_db_setup.py  test_endpoints.sh
backend/tests/: conftest.py  generate_jwt_token.py  generate_test_token.py  generate_test_ws_token.py  generate_ws_key.py  get_token.py  run_integration_tests.sh  run_tests.sh  run_websocket_test.sh  test_auth.py  test_database.py  test_environment.py  test_streams.py  test_stripe.py  test_websocket.py  test_websocket_client.py  websocket_test.py
frontend/: .env  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/lib/: api-client.ts  env.ts
frontend/src/pages/: Landing.tsx  Login.tsx  Pricing.tsx  PrivacyPolicy.tsx  Studio.tsx  Success.tsx
src/: App.tsx
