[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
authlib = "^1.4.0"
httpx-oauth = "^0.16.1"
aiortc = "^1.9.0"
aiohttp = "^3.11.11"
websockets = "^12.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
starlette = "^0.45.3"
itsdangerous = "^2.2.0"
pyjwt = "^2.10.1"
stripe = "^7.11.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
alembic-postgresql-enum = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy-utils = "^0.41.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
markers = [
    "asyncio: mark test as async"
]
env = [
    "JWT_SECRET=test-secret",
    "GOOGLE_CLIENT_ID=test-client-id",
    "GOOGLE_CLIENT_SECRET=test-client-secret",
    "FRONTEND_URL=http://localhost:5173",
    "PUBLIC_URL=http://localhost:8000",
    "OAUTH_REDIRECT_URL=http://localhost:8000/auth/callback"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
